<resources>
    <string name="app_name">PAS mbek Daffa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onBoarding1">Find your Comfort Food here</string>
    <string name="content_desc">TODO</string>
    <string name="daffa_jago">Daffa Jago</string>
    <string name="_25_35_min">25:35 Min</string>
    <string name="test">test</string>
    <string name="ringing">Ringing....</string>
    <string name="chat">Chat</string>
    <string name="halo_daffa_kamu_dewa_banget">Halo daffa! kamu dewa banget</string>
    <string name="_20_00">20:00</string>
    <string name="hey_babe">Hey Babe!</string>
    <string name="online">Online</string>
    <string name="congrats">Congrats!</string>
    <string name="your_profile_is_ready_to_use">Your profile is ready to use</string>
    <string name="coba">Try</string>
    <string name="payment_succesfull">Payment Succesfull</string>
    <string name="set_location">set location</string>
    <string name="jl_abdul_rahman_saleh_malang_selatan">Jl. Abdul Rahman Saleh, Malang Selatan</string>
    <string name="deliver_to">Deliver To</string>
    <string name="jl_sengkaling_barat_malang_raya">Jl. Sengkaling Barat Malang Raya</string>
    <string name="order_location">Order Location</string>
    <string name="shipping">Shipping</string>
    <string name="payment">Payment</string>
    <string name="_2121_6352_8465">2121 6352 8465 ****</string>
    <string name="find_your_favorite_food">Find Your Favorite Food</string>
    <string name="what_do_you_want_to_order">What do you want to order?</string>
    <string name="nearest_restaurant">Nearest Restaurant</string>
    <string name="green_noddle">Green Noddle</string>
    <string name="noddle_home">Noddle Home</string>
    <string name="_15">$15</string>
    <string name="food_ninja_is_where_your_comfort_food_lives">Food Ninja is Where Your Comfort Food Lives</string>
    <string name="enjoy_a_fast_and_smooth_food_delivery_at_your_doorstep">Enjoy a fast and smooth food delivery at your doorstep</string>
    <string name="next">Next</string>
    <string name="here_you_can_find_a_chef_or_dish_for_every_taste_and_color_enjoy">Here You can Find a Chef or Dish for every taste and color. Enjoy!</string>
    <string name="soup">Soup</string>
    <string name="special_deal_for_october">Special Deal For October</string>
    <string name="order_now">Order Now</string>
    <string name="foodninja">FoodNinja</string>
    <string name="deliever_favorite_food">Deliever Favorite Food</string>
    <string name="find_your_location">Find Your Location</string>
    <string name="your_location">Your Location</string>
    <string name="_4517_washington_ave_manchester_kentucky_39495">4517 Washington Ave. Manchester, Kentucky 39495</string>
    <string name="skip">Skip</string>
    <string name="submit">Submit</string>
    <string name="leave_feedback">Leave feedback!</string>
    <string name="please_rate_your_restaurant">Please rate your restaurant</string>
    <string name="thank_you_enjoy_your_meal">Thank You! Enjoy Your Meal</string>
    <string name="spacy_fresh_crab">Spacy fresh crab</string>
    <string name="_25_minutes_on_the_way">25 minutes on the way</string>
    <string name="_29">$29</string>
    <string name="martabak_manis">Martabak Manis</string>
    <string name="_12_minutes_on_the_way">12 minutes on the way</string>
    <string name="_12">$ 12</string>
    <string name="nasi_goreng">Nasi Goreng</string>
    <string name="your_order_finished">Your order finished</string>
    <string name="_45">$ 45</string>
    <string name="bakso_malang">Bakso Malang</string>
    <string name="_32">$ 32</string>
    <string name="track_order">Track Order</string>
    <string name="set_your_location">Set Your Location</string>
    <string name="this_data_will_be_displayed_in_your_account_profile_for_security">This data will be displayed in your account profile for security</string>
    <string name="sign_up_for_free">Sign Up For Free</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="keep_me_sign_in">Keep me Sign in</string>
    <string name="email_me_about_special_pricing">Email me About special Pricing</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="please_rate_your_food">Please rate your food</string>
    <string name="thank_you_order_completed">Thank You! Order Completed</string>
    <string name="please_rate_your_last_driver">Please rate your last driver</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="edit">Edit</string>
    <string name="payment_method">Payment Method</string>
    <string name="gopay">gopay</string>
    <string name="_62_6383_8xxx_xxxx">+62 6383 8xxx xxxx</string>
    <string name="place_my_order">Place my order</string>
    <string name="sub_total">Sub-total</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="discount">Discount</string>
    <string name="total">Total</string>
    <string name="_120">120 $</string>
    <string name="_10">10 $</string>
    <string name="_150">150 $</string>
    <string name="notification">Notification</string>
    <string name="your_order_has_been_taken_by_the_driver">your order has been taken by the driver</string>
    <string name="recently">Recently</string>
    <string name="top_up_for_100_was_succsessful">Top up for $100 was Succsessful</string>
    <string name="_05_36_pm">05.36 Pm</string>
    <string name="your_order_has_been_canceled">Your order has been canceled</string>
    <string name="_20_may_2023">20 May 2023</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="or_continue_with">Or Continue With</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="type">Type</string>
    <string name="restaurant">Restaurant</string>
    <string name="menu">Menu</string>
    <string name="_1_km">1 Km</string>
    <string name="_10_km"><![CDATA[>10 Km]]></string>
    <string name="cake">Cake</string>
    <string name="main_course">Main Course</string>
    <string name="apetizzer">Apetizzer</string>
    <string name="dessert">Dessert</string>
    <string name="popular_restaurant">Popular Restaurant</string>
    <string name="view_more">View More</string>
    <string name="vegan_resto">Vegan Resto</string>
    <string name="_12_mins">12 Mins</string>
    <string name="buy_now">Buy Now</string>
    <string name="popular_menu">Popular Menu</string>
    <string name="order_details">Order Details</string>
    <string name="waroenk_madura">Waroenk Madura</string>
    <string name="_1">1</string>
</resources>