<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Onboarding1"
    android:background="@color/main_color">

    <ImageView

        android:contentDescription="@string/content_desc"
        android:layout_marginTop="70dp"
        android:src="@drawable/onboarding_1"
        android:layout_width="408.5dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/bentonbold"
        android:lineHeight="37dp"
        android:text="@string/onBoarding1"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="27sp"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/onboarding_subtitle"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="175dp"
        android:fontFamily="@font/bentonbook"
        android:lineHeight="22sp"
        android:text="@string/here_you_can_find_a_chef_or_dish_for_every_taste_and_color_enjoy"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp"
        tools:ignore="TextSizeCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="330dp"
        android:backgroundTint="@color/ui_color"
        android:fontFamily="@font/bentonbold"
        android:paddingLeft="55dp"
        android:paddingTop="20dp"
        android:paddingRight="55dp"
        android:paddingBottom="20dp"
        android:text="@string/next"
        android:textSize="20sp"
        app:cornerRadius="14dp"
        tools:ignore="TextSizeCheck,TextContrastCheck" />


</FrameLayout>