<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Onboarding2"
    android:background="@color/main_color">

  <ImageView
      android:contentDescription="@string/content_desc"
      android:id="@+id/img_onboarding2"
      android:layout_width="408.5dp"
      android:layout_height="wrap_content"
      android:src="@drawable/onboarding_2"
      android:layout_marginTop="70dp"/>

    <TextView
        android:id="@+id/onboarding_title"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/bentonbold"
        android:lineHeight="29sp"
        android:text="@string/food_ninja_is_where_your_comfort_food_lives"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="27sp"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/onboarding_subtitle"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="175dp"
        android:fontFamily="@font/bentonbook"
        android:lineHeight="22sp"
        android:text="@string/enjoy_a_fast_and_smooth_food_delivery_at_your_doorstep"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp"
        tools:ignore="TextSizeCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextLast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="330dp"
        android:backgroundTint="@color/ui_color"
        android:fontFamily="@font/bentonbold"
        android:paddingLeft="55dp"
        android:paddingTop="20dp"
        android:paddingRight="55dp"
        android:paddingBottom="20dp"
        android:text="@string/next"
        android:textSize="20sp"
        app:cornerRadius="14dp"
        tools:ignore="TextSizeCheck,TextContrastCheck" />




</FrameLayout>