<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context=".Payments"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color">


        <ImageView

            android:contentDescription="@string/content_desc"
            android:id="@+id/imageView2"
            android:layout_width="359dp"
            android:layout_height="202dp"
            android:src="@drawable/icon_home_fruit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/google"
            android:layout_width="60dp"
            android:layout_height="67dp"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="38dp"
            android:backgroundTint="#251c13"
            android:paddingStart="45dp"
            android:paddingTop="39.5dp"
            android:paddingEnd="35dp"
            android:paddingBottom="20dp"
            android:text="@string/test"
            android:textSize="19sp"
            app:cornerRadius="22dp"
            app:icon="@drawable/baseline_arrow_back_ios_24"
            app:iconGravity="textTop"
            app:iconSize="25dp"
            app:iconTint="#ba6317"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextSizeCheck" />

        <TextView
                android:id="@+id/paymentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bentonbold"
            android:text="@string/confirm_order"
            android:textColor="@color/white"
            android:textSize="35sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/google"
            android:layout_marginStart="35dp"
            android:layout_marginTop="10dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/deliverLoc"
            android:layout_width="360dp"
            android:layout_height="141dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="#252525"
            android:backgroundTint="#80252525"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/paymentTitle"
            card_view:cardCornerRadius="22dp"
            tools:ignore="TextSizeCheck">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/headDeliver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/bentonregular"
                    android:text="@string/deliver_to"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TextContrastCheck" />

                <ImageView

                    android:id="@+id/deliverImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/content_desc"
                    android:src="@drawable/setloc"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/deliverTitle"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/bentosanmedium"
                    android:text="@string/jl_abdul_rahman_saleh_malang_selatan"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="@+id/deliverImage"
                    app:layout_constraintStart_toEndOf="@+id/deliverImage"
                    app:layout_constraintTop_toTopOf="@+id/deliverImage"
                    tools:ignore="TextSizeCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:fontFamily="@font/bentonregular"
                    android:text="@string/edit"
                    android:textColor="@color/ui_color"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TextSizeCheck" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/paymentMethod"
            android:layout_width="360dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="#252525"
            android:backgroundTint="#80252525"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/deliverLoc"
            card_view:cardCornerRadius="22dp"
            tools:ignore="TextSizeCheck">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/headPayment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/bentonregular"
                    android:text="@string/payment_method"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TextContrastCheck" />

                <ImageView

                    android:id="@+id/gopayImage"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/content_desc"
                    android:src="@drawable/gopay_logo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/methodTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/bentonbold"
                    android:text="@string/gopay"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="@+id/gopayImage"
                    app:layout_constraintStart_toEndOf="@+id/gopayImage"
                    app:layout_constraintTop_toTopOf="@+id/gopayImage"
                    tools:ignore="TextSizeCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:fontFamily="@font/bentonregular"
                    android:text="@string/edit"
                    android:textColor="@color/ui_color"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TextSizeCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="40dp"
                    android:fontFamily="@font/bentonregular"
                    android:text="@string/_62_6383_8xxx_xxxx"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/methodTitle"
                    tools:ignore="TextSizeCheck" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="380dp"
            android:layout_height="230dp"
            android:layout_marginTop="185dp"
            android:backgroundTint="@color/ui_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/paymentMethod"
            card_view:cardCornerRadius="22.5dp">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/nextLast"
                    android:layout_width="325dp"
                    android:layout_height="57dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="180dp"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/bentonbold"
                    android:paddingLeft="55dp"
                    android:paddingRight="55dp"
                    android:text="@string/place_my_order"
                    android:textColor="@color/ui_color"
                    android:textSize="14sp"
                    app:cornerRadius="14dp"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="VisualLintButtonSize" />

                <TextView
                    android:id="@+id/subTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/bentosanmedium"
                    android:text="@string/sub_total"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/nextLast"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TextSizeCheck,TextContrastCheck" />

                <TextView
                    android:id="@+id/deliverCharge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/bentosanmedium"
                    android:text="@string/delivery_charge"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/nextLast"
                    app:layout_constraintTop_toTopOf="@id/subTotal"
                    tools:ignore="TextSizeCheck,TextContrastCheck" />

                <TextView
                    android:id="@+id/discount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/bentosanmedium"
                    android:text="@string/discount"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/nextLast"
                    app:layout_constraintTop_toTopOf="@id/deliverCharge"
                    tools:ignore="TextSizeCheck,TextContrastCheck" />

                <TextView
                    android:id="@+id/total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bentonbold"
                    android:text="@string/total"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@+id/nextLast"
                    app:layout_constraintTop_toTopOf="@id/discount"
                    android:layout_marginTop="50dp"
                    android:layout_marginStart="20dp"/>

                <TextView
                    android:id="@+id/dollar1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/bentosanmedium"
                    android:text="@string/_120"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/nextLast"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TextSizeCheck,TextContrastCheck" />

                <TextView
                    android:id="@+id/dollar2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/bentosanmedium"
                    android:text="@string/_10"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/nextLast"
                    app:layout_constraintTop_toTopOf="@id/dollar1"
                    tools:ignore="TextSizeCheck,TextContrastCheck" />

                <TextView
                    android:id="@+id/dollar4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:fontFamily="@font/bentonbold"
                    android:text="@string/_150"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="@+id/nextLast"
                    app:layout_constraintTop_toTopOf="@id/discount"
                    android:layout_marginEnd="20dp"/>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>