<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context=".SetLocation"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color">


        <ImageView

            android:contentDescription="@string/content_desc"
            android:id="@+id/imageView2"
            android:layout_width="359dp"
            android:layout_height="202dp"
            android:src="@drawable/icon_home_fruit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/google"
            android:layout_width="60dp"
            android:layout_height="67dp"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="38dp"
            android:backgroundTint="#251c13"
            android:paddingStart="45dp"
            android:paddingTop="39.5dp"
            android:paddingEnd="35dp"
            android:paddingBottom="20dp"
            android:text="@string/test"
            android:textSize="19sp"
            app:cornerRadius="22dp"
            app:icon="@drawable/baseline_arrow_back_ios_24"
            app:iconGravity="textTop"
            app:iconSize="25dp"
            app:iconTint="#ba6317"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/setTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bentonbold"
            android:text="@string/set_your_location"
            android:textColor="@color/white"
            android:textSize="35sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/google"
            android:layout_marginStart="35dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/setSubTitle"
            android:layout_width="239dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/bentonbook"
            android:lineHeight="22dp"
            android:text="@string/this_data_will_be_displayed_in_your_account_profile_for_security"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setTitle"
            tools:ignore="TextSizeCheck" />

        <androidx.cardview.widget.CardView
            android:id="@+id/locBack"
            card_view:cardCornerRadius="22dp"
            android:layout_width="360dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="#252525"
            android:backgroundTint="#80252525"
            app:layout_constraintTop_toBottomOf="@id/setSubTitle" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

               <ImageView

                   android:contentDescription="@string/content_desc"
                   android:id="@+id/setLocImage"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/setloc"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   android:layout_marginTop="20dp"
                   android:layout_marginStart="15dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/bentosanmedium"
                    android:text="@string/your_location"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="@+id/setLocImage"
                    app:layout_constraintStart_toEndOf="@+id/setLocImage"
                    app:layout_constraintTop_toTopOf="@+id/setLocImage"
                    tools:ignore="TextSizeCheck" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/setLocButton"
                    android:layout_width="322dp"
                    android:layout_height="57dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="#7B7B7B"
                    android:fontFamily="@font/bentonbold"
                    android:paddingLeft="55dp"
                    android:paddingRight="55dp"
                    android:text="@string/set_location"
                    android:textSize="14sp"
                    app:cornerRadius="14dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="TextSizeCheck,TextContrastCheck,VisualLintButtonSize" />




            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nextLast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/ui_color"
            android:fontFamily="@font/bentonbold"
            android:paddingLeft="55dp"
            android:paddingTop="20dp"
            android:paddingRight="55dp"
            android:paddingBottom="20dp"
            android:text="@string/next"
            android:textSize="20sp"
            app:cornerRadius="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locBack"
            android:layout_marginTop="375dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>